--- a/next-profile-01/app/globals.css
+++ b/next-profile-01/app/globals.css
@@ -1,3 +1,10 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+/* Commented Default CSS
+
 :root {
   --max-width: 1100px;
   --border-radius: 12px;
@@ -105,3 +112,4 @@ a {
     color-scheme: dark;
   }
 }
+*/
